# cmake-header-only-template

./: CMakeLists.txt  COPYRIGHT  LICENSE  README.md
include/: yourlib.h
test/: CMakeLists.txt  test.cpp
